--- a/ConsoleApp/ConsoleApp.csproj
+++ b/ConsoleApp/ConsoleApp.csproj
@@ -43,9 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bulb.cs" />
+    <Compile Include="ColoredBulb.cs" />
+    <Compile Include="ColoredLightstring.cs" />
+    <Compile Include="Lightstring.cs" />
     <Compile Include="Polynomial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleLightstring.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
